--- a/test/Makefile
+++ b/test/Makefile
@@ -1,2 +1,2 @@
 all:
-	nvcc -I/usr/local/cuda-10.0/samples/common/inc grayscale.cu
+	nvcc -I/usr/local/cuda-10.0/samples/common/inc grayscale.cu `pkg-config --cflags --libs opencv4`
